--- a/start.html
+++ b/start.html
@@ -10,6 +10,15 @@
 <body>
     <div class="header-title">
         <h1>In-between Game</h1>
+        <div class="mechanics">
+          <h3>Game Mechanics:</h3>
+          <p>Guess if the third number is between Card 1 and Card 2. <br>
+            If they are identical, guess if Card 3 is higher or lower. <br>
+            If you guessed right, you get a point! You lose a point if not. <br>
+            If you click "No Deal", your total score will be deducted.
+          </p>
+    
+        </div>
         <h4 id="round">Round 0</h4>
         <h4 id="score">Score: </h4>
 
@@ -20,10 +29,10 @@
         <h4>Card 2: </h4>
         <p id="card2"></p>
 
-        <h4 id="d3">Card 3: </h4>
+        <h4 id="deck">Card 3: </h4>
         <p id="card3"></p>
 
-        <h3 id="lw"></h3>
+        <h3 id="status"></h3>
     
     <div class="buttons">
 
